bridson implementation done
also added arg for radius. In future will make it vary based on random schem size

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ depend: [WorldEdit]
 commands:
   wood:
     description: Creates a forest/wood in your selection from schematics
-    usage: /wood <schematic(s)> <blockID> <-ua>
+    usage: /wood <schematic(s)> <blockID> <radius> <flags -ua>
     permission: bteenhanced.wood
   wood-undo:
     description: Undo the /wood command
