--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 
     <build>
         <!--suppress UnresolvedMavenProperty -->
-        <finalName>${project.artifactId}-${project.version}-${git.commit.id.abbrev}</finalName>
+        <finalName>${project.artifactId}-${project.version}-alpha-${git.commit.id.abbrev}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
