--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,12 +4,6 @@ commands:
   wood:
     description: Creates a forest/wood in your selection from schematics
     usage: /wood <schematic(s)> <blockID> <-includeAir,-dontRotate,-r:x>
-  wood-redo:
-    description: Redo the /wood command
-    usage: /wood-redo
-  wood-undo:
-    description: Undo the /wood command
-    usage: /wood-undo
   bteenhanced-reload:
     description: Reload config
     usage: /bteenhanced-reload
@@ -25,7 +19,7 @@ permissions:
     description: Reload config
     default: op
   bteenhanced.wood.*:
-    description: Allows /wood /wood-undo and /wood-redo
+    description: Allows usage of /wood
     default: op
     children:
       bteenhanced.wood.all: true
