--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,15 @@
 ---
 author: VapoR
+main: ${project.groupId}.${project.artifactId}.${project.name}
+name: ${project.name}
+version: ${project.version}
+depend:
+  - WorldEdit
 commands:
   wood:
     description: Creates a forest/wood in your selection from schematics
     usage: /wood <schematic(s)> <blockID> <-includeAir,-dontRotate,-r:x>
+    aliases: /wood
   bteenhanced-reload:
     description: Reload config
     usage: /bteenhanced-reload
@@ -26,9 +32,3 @@ permissions:
   bteenhanced.wood.all:
     description: Allows people to use all files in schematics folder with *
     default: op
-
-depend:
-  - WorldEdit
-main: ${project.groupId}.${project.artifactId}.${project.name}
-name: ${project.name}
-version: ${project.version}
