--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.vaporrrr</groupId>
     <artifactId>bteenhanced</artifactId>
-    <version>1.0.3-BETA</version>
+    <version>1.0.3</version>
     <packaging>jar</packaging>
 
     <name>BTEEnhanced</name>
@@ -39,6 +39,11 @@
             <artifactId>bukkit</artifactId>
             <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
