--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,7 @@
-# MaxSchemSize: 5100 (In bytes)
+# MaxSchemSize: 5120 (In bytes)
 # MaxTries: 60 (Bridons algorithm tries to find a suitable next point for a tree. The narrower/smaller the selection and larger the radius the less likely a point is found per try.
 # So too low of a value will leave holes, while too high and speed will be slower. I suggest you don't touch the number of tries.
+# UpdateCheckEnabled: true (If plugin will check for new GitHub releases)
 MaxSchemSize: 5120
 MaxTries: 60
+UpdateCheckEnabled: true
